{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 746,
  "lineage": "092caa4f-08ea-26e1-60a1-1d4ae139b960",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c217c6307ef1c09",
            "domain": "vpc",
            "id": "eipalloc-07c217c6307ef1c09",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-11-236-41.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.236.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-us-west-2a",
              "Owner": "user"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be93619498de4a45",
            "domain": "vpc",
            "id": "eipalloc-0be93619498de4a45",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-80-123-228.us-west-2.compute.amazonaws.com",
            "public_ip": "35.80.123.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-us-west-2b",
              "Owner": "user"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:internet-gateway/igw-0906896c98c3b8273",
            "id": "igw-0906896c98c3b8273",
            "owner_id": "922655761917",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c217c6307ef1c09",
            "connectivity_type": "public",
            "id": "nat-045ed5cdbe4961839",
            "network_interface_id": "eni-0f66ae31b95b1e88f",
            "private_ip": "10.101.66.129",
            "public_ip": "52.11.236.41",
            "subnet_id": "subnet-015da70a2bbf87a62",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-us-west-2a",
              "Owner": "user"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be93619498de4a45",
            "connectivity_type": "public",
            "id": "nat-0e7f796618f843a27",
            "network_interface_id": "eni-03a6200dc28355bdd",
            "private_ip": "10.101.67.129",
            "public_ip": "35.80.123.228",
            "subnet_id": "subnet-0da7251a3b66cc24e",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-us-west-2b",
              "Owner": "user"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "firewall_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "r-rtb-013c8ec9ec512e7901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013c8ec9ec512e790",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.firewall",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "firewall_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "r-rtb-013c8ec9ec512e7902750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013c8ec9ec512e790",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.firewall",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.101.66.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0143c935b19bebaec757413848",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0143c935b19bebaec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-056ae8e11ef0bde01",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this_firewall",
            "module.firewall.aws_networkfirewall_firewall_policy.test",
            "module.vpc.aws_route_table.ingress",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.101.67.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0143c935b19bebaec3866748029",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0143c935b19bebaec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0cdde4a4f75f4b6a4",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this_firewall",
            "module.firewall.aws_networkfirewall_firewall_policy.test",
            "module.vpc.aws_route_table.ingress",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "r-rtb-0d88cfd70a863a2dd2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d88cfd70a863a2dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "r-rtb-0ee1bd1b325228be82750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee1bd1b325228be8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "r-rtb-0d88cfd70a863a2dd2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d88cfd70a863a2dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "r-rtb-0ee1bd1b325228be82750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee1bd1b325228be8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "r-rtb-0d88cfd70a863a2dd2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d88cfd70a863a2dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "r-rtb-0ee1bd1b325228be82750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee1bd1b325228be8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d88cfd70a863a2dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-045ed5cdbe4961839",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d88cfd70a863a2dd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee1bd1b325228be81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e7f796618f843a27",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee1bd1b325228be8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:route-table/rtb-013c8ec9ec512e790",
            "id": "rtb-013c8ec9ec512e790",
            "owner_id": "922655761917",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-firewall",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-firewall",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:route-table/rtb-0143c935b19bebaec",
            "id": "rtb-0143c935b19bebaec",
            "owner_id": "922655761917",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "igw-ingress-rt",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "igw-ingress-rt",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:route-table/rtb-0d88cfd70a863a2dd",
            "id": "rtb-0d88cfd70a863a2dd",
            "owner_id": "922655761917",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2a",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:route-table/rtb-0ee1bd1b325228be8",
            "id": "rtb-0ee1bd1b325228be8",
            "owner_id": "922655761917",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2b",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:route-table/rtb-095bc5714b0845d51",
            "id": "rtb-095bc5714b0845d51",
            "owner_id": "922655761917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0906896c98c3b8273",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-056ae8e11ef0bde01",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-protected-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-protected-us-west-2a",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this_firewall",
            "module.firewall.aws_networkfirewall_firewall_policy.test",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:route-table/rtb-094941e768585ccf6",
            "id": "rtb-094941e768585ccf6",
            "owner_id": "922655761917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0906896c98c3b8273",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0cdde4a4f75f4b6a4",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-protected-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-protected-us-west-2b",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this_firewall",
            "module.firewall.aws_networkfirewall_firewall_policy.test",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028eb363b91d58b7f",
            "route_table_id": "rtb-013c8ec9ec512e790",
            "subnet_id": "subnet-0d2b7008f17afb58e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.firewall",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056a060ad003c3f8e",
            "route_table_id": "rtb-013c8ec9ec512e790",
            "subnet_id": "subnet-0d411ed835ba31981"
          },
          "dependencies": [
            "module.vpc.aws_route_table.firewall",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-0906896c98c3b8273",
            "id": "rtbassoc-0247f03f650923702",
            "route_table_id": "rtb-0143c935b19bebaec"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.ingress",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d88c37934731589",
            "route_table_id": "rtb-0d88cfd70a863a2dd",
            "subnet_id": "subnet-0497615555edeb47d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08969cf8141d24f21",
            "route_table_id": "rtb-0ee1bd1b325228be8",
            "subnet_id": "subnet-0219ade17e8b005bd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b58a3f451365adcc",
            "route_table_id": "rtb-0d88cfd70a863a2dd",
            "subnet_id": "subnet-0c06f41673abdca8e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cd3bc3d67f18e10",
            "route_table_id": "rtb-0ee1bd1b325228be8",
            "subnet_id": "subnet-0e9795cb25137ccdf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00111e8919ce7e3bf",
            "route_table_id": "rtb-0d88cfd70a863a2dd",
            "subnet_id": "subnet-092580d55ae0c517b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b13847543cbdaa39",
            "route_table_id": "rtb-0ee1bd1b325228be8",
            "subnet_id": "subnet-0cdd40d4d3d774399"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0823d399f42bf3f1e",
            "route_table_id": "rtb-095bc5714b0845d51",
            "subnet_id": "subnet-015da70a2bbf87a62"
          },
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this_firewall",
            "module.firewall.aws_networkfirewall_firewall_policy.test",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b16d76aa8dbab32",
            "route_table_id": "rtb-094941e768585ccf6",
            "subnet_id": "subnet-0da7251a3b66cc24e"
          },
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this_firewall",
            "module.firewall.aws_networkfirewall_firewall_policy.test",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.protected",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_subnet.protected",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-0d2b7008f17afb58e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.101.65.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2b7008f17afb58e",
            "ipv6_cidr_block": "2600:1f14:caa:bf00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d98e9db6eed23740",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-firewall-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-firewall-us-west-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-0d411ed835ba31981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.101.65.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d411ed835ba31981",
            "ipv6_cidr_block": "2600:1f14:caa:bf01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a00dff64dc929a8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-firewall-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-firewall-us-west-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-0497615555edeb47d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.101.68.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0497615555edeb47d",
            "ipv6_cidr_block": "2600:1f14:caa:bf04::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-029f50502e699b79e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-0219ade17e8b005bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.101.69.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0219ade17e8b005bd",
            "ipv6_cidr_block": "2600:1f14:caa:bf05::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0837d056b5b93672f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-0c06f41673abdca8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.101.70.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c06f41673abdca8e",
            "ipv6_cidr_block": "2600:1f14:caa:bf06::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-00d03082a915d27c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-0e9795cb25137ccdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.101.71.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9795cb25137ccdf",
            "ipv6_cidr_block": "2600:1f14:caa:bf07::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a1afbf6e7868b2e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-092580d55ae0c517b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.101.72.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092580d55ae0c517b",
            "ipv6_cidr_block": "2600:1f14:caa:bf08::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a1bc9376a5de96b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-0cdd40d4d3d774399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.101.73.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdd40d4d3d774399",
            "ipv6_cidr_block": "2600:1f14:caa:bf09::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d8b0d355f9913d11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-private-us-west-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-015da70a2bbf87a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.101.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015da70a2bbf87a62",
            "ipv6_cidr_block": "2600:1f14:caa:bf02::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09d570081299ff861",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-protected-us-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-protected-us-west-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:subnet/subnet-0da7251a3b66cc24e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.101.67.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da7251a3b66cc24e",
            "ipv6_cidr_block": "2600:1f14:caa:bf03::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0962a705b77adf09f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "922655761917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ec2-subnet-protected-us-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ec2-subnet-protected-us-west-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-01edf7b1a73b2838d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:922655761917:vpc/vpc-01edf7b1a73b2838d",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.101.64.0/20",
            "default_network_acl_id": "acl-0e7d0d5f66b292947",
            "default_route_table_id": "rtb-08e7056d067047129",
            "default_security_group_id": "sg-087a98570ce3e173c",
            "dhcp_options_id": "dopt-da3cdcbf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01edf7b1a73b2838d",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-05c372d99cc54af53",
            "ipv6_cidr_block": "2600:1f14:caa:bf00::/56",
            "ipv6_cidr_block_network_border_group": "us-west-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e7056d067047129",
            "owner_id": "922655761917",
            "tags": {
              "Environment": "dev",
              "Name": "on1-dr-vpc",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "on1-dr-vpc",
              "Owner": "user"
            }
          }
        }
      ]
    }
  ]
}